--- a/back-automotores/Dockerfile
+++ b/back-automotores/Dockerfile
@@ -1,12 +1,17 @@
-FROM node:22-alpine
+FROM node:22-alpine as builder
 
 WORKDIR /app
+
 COPY package*.json ./
-RUN npm install --omit=dev
+
+RUN npm install
 
 COPY . .
 
 RUN npm run build
 
+COPY .env ./.env
+
 EXPOSE 3000
+
 CMD ["node", "dist/main.js"]
