--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,5 @@
-version: "1.0"
-
 services:
-  angular:
+  front:
     build:
       context: ./front-automotores
       dockerfile: Dockerfile
@@ -17,7 +15,7 @@ services:
     build:
       context: ./back-automotores
       dockerfile: Dockerfile
-    command: sh -c "npm run typeorm migration:generate ./src/migrations/InitSchema && npm run typeorm migration:run && npm run seed"
+    command: sh -c "npm run typeorm migration:run && npm run seed"
     container_name: back-automotores
     env_file:
       - ./back-automotores/.env
