--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     build:
       context: ./back-automotores
       dockerfile: Dockerfile
-    command: sh -c "npm run typeorm migration:run && npm run seed"
+    command: sh -c "npm run typeorm migration:run && npm run seed && npm run start:prod"
     container_name: back-automotores
     env_file:
       - ./back-automotores/.env
